infra/dashboard/ingress.yaml
#
# Auth Ingress
#
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth-dash.stonegarden.dev`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: traefik-forward-auth
    - match: Host(`dashboard.stonegarden.dev`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 80
      middlewares:
        - name: traefik-forward-auth
  tls:
    certResolver: letsencrypt
